Sampler is now based on Cominisatps
Changed sampler module to be based on Cominisatps. Mainly due to the simple build procedure.

--- a/sampler/simp/Makefile
+++ b/sampler/simp/Makefile
@@ -1,4 +1,4 @@
 EXEC      = minisat
 DEPDIR    = mtl utils core
-
+MROOT=/home/soos/development/sat_solvers/COMiniSatPS_Main_Sequence/
 include $(MROOT)/mtl/template.mk
