--- a/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj.filters
+++ b/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="..\alias_ls.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\base_ls.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\igbfs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\point.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\base_ls.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
