local search via classes

--- a/localsearch/Makefile
+++ b/localsearch/Makefile
@@ -1,13 +1,19 @@
 CPP = mpicxx
 CPPFLAGS = -O3 -std=c++0x
 
-igbfs: igbfs.o
-	${CPP} ${CPPFLAGS} igbfs.o -o igbfs
+igbfs: base_ls.o igbfs.o alias_ls.o
+	${CPP} ${CPPFLAGS} base_ls.o igbfs.o alias_ls.o -o alias_ls
+
+alias_ls.o: alias_ls.cpp
+	${CPP} ${CPPFLAGS} alias_ls.cpp -c
 
 igbfs.o: igbfs.cpp
 	${CPP} ${CPPFLAGS} igbfs.cpp -c
 
+base_ls.o: base_ls.cpp
+	${CPP} ${CPPFLAGS} base_ls.cpp -c
+
 clean:
 	rm -rf *.o
-	rm igbfs
+	rm alias_ls
 	clear
