--- a/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj
+++ b/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj
@@ -124,6 +124,9 @@
     <ClInclude Include="..\igbfs.h" />
     <ClInclude Include="..\point.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Makefile" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
