--- a/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj.filters
+++ b/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj.filters
@@ -36,4 +36,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Makefile" />
+  </ItemGroup>
 </Project>
