+ blank class for merged hill climbing

--- a/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj.filters
+++ b/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\base_ls.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\merged_ihc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\igbfs.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\base_ls.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\merged_ihc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
