--- a/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj
+++ b/localsearch/VS_alias_localsearch/VS_alias_localsearch.vcxproj
@@ -118,10 +118,12 @@
     <ClCompile Include="..\alias_ls.cpp" />
     <ClCompile Include="..\base_ls.cpp" />
     <ClCompile Include="..\igbfs.cpp" />
+    <ClCompile Include="..\merged_ihc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\base_ls.h" />
     <ClInclude Include="..\igbfs.h" />
+    <ClInclude Include="..\merged_ihc.h" />
     <ClInclude Include="..\point.h" />
   </ItemGroup>
   <ItemGroup>
